--- a/bacteria/style.css
+++ b/bacteria/style.css
@@ -4,6 +4,15 @@ body {
   padding: 0;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100lvh;
+  background-color: black;
+}
+
 canvas {
   display: block;
 }
